# Easy-Eva-Studio-v7.5

./: Cargo.toml  Dockerfile  LICENSE  README.md  V10_RELEASE_NOTES.txt  V12_FINAL_RELEASE.txt  V8_RELEASE_NOTES.txt  V9_RELEASE_NOTES.txt  client_vault.key  debug_sum.sh  fhe_result.tmp  final_release.sh  final_test.sh  quick_switch.sh  run_tests.sh  run_v8.sh  seal_results.py  simple_fhe_wrapper.cpp  stress_test.sh  test_extended_ops.sh  test_phase1  test_phase1.rs  test_results.csv  vault.db  verify_pipeline.py  verify_setup.sh
fhe-api/: Cargo.toml
fhe-api/src/: lib.rs
fhe-core/: Cargo.toml
fhe-core/src/: lib.rs
fhe-main/: .gitignore  Cargo.toml  Cargo.toml.backup  run_performance_test.sh
fhe-main/.cargo/: config.toml
fhe-main/benches/: integration_benchmarks.rs
fhe-main/src/: fhe_engine.rs  lib.rs  main.rs  main.rs.backup.1765902504  main.rs.backup.1765902552  main.rs::*;  main.rs::*;::*;
