[package]
name = "fhe-main"
version = "0.11.0"
edition = "2021"

[dependencies]
fhe-core = { path = "../fhe-core" }

# FIX: Auch hier "aarch64-unix" mit BINDESTRICH
tfhe = { version = "0.7.4", features = ["integer", "shortint", "boolean", "aarch64-unix"] }

rayon = "1.10"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
